tests/NormalTests/paczka1/small_fuzzy/75493970.err
Error in line 4: A573 A539 39,6
Error in line 9: A573 A911 21,6
